--- a/package.json
+++ b/package.json
@@ -1,33 +1,33 @@
 {
-  "name": "realestate",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@chakra-ui/react": "^1.8.7",
-    "@emotion/react": "^11.8.2",
-    "@emotion/styled": "^11.8.1",
-    "axios": "^0.26.1",
-    "framer-motion": "^6.2.8",
-    "millify": "^4.0.0",
-    "next": "^12.1.4",
-    "nprogress": "^0.2.0",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-horizontal-scrolling-menu": "^2.7.1",
-    "react-icons": "^4.3.1",
-    "sharp": "^0.30.3"
-  },
-  "devDependencies": {
-    "@netlify/plugin-nextjs": "^4.3.1",
-    "@swc/cli": "^0.1.57",
-    "@swc/core": "^1.2.163",
-    "eslint": "8.12.0",
-    "eslint-config-next": "12.1.1"
-  }
+    "name": "realestate",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "@chakra-ui/react": "^1.8.7",
+        "@emotion/react": "^11.8.2",
+        "@emotion/styled": "^11.8.1",
+        "axios": "^0.26.1",
+        "framer-motion": "^6.2.8",
+        "millify": "^4.0.0",
+        "next": "13.1.6",
+        "nprogress": "^0.2.0",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-horizontal-scrolling-menu": "^2.7.1",
+        "react-icons": "^4.3.1",
+        "sharp": "^0.30.3"
+    },
+    "devDependencies": {
+        "@netlify/plugin-nextjs": "^4.3.1",
+        "@swc/cli": "^0.1.57",
+        "@swc/core": "^1.2.163",
+        "eslint": "8.12.0",
+        "eslint-config-next": "12.1.1"
+    }
 }
